# pali

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mandelbrot  mandelbrot.cpp  p.py  pali  pyproject.toml  python  python.cpp  snake.cpp  snow  snow.cpp  sphere  sphere.cpp  ui  ui.cpp  verify.py
examples/: CMakeLists.txt  mandelbrot.cpp  python  python.cpp  snow  snow.cpp  sphere.cpp  ui  ui.cpp  ui1.cpp  ui2.cpp  ui3.cpp  ui4.cpp
examples/pali/: pali.xml
src/: CMakeLists.txt  color.hpp  pali.cpp  pali.hpp
src/pali/: engine.py  image.py  pve.py
