add_executable(python python.cpp)
add_executable(mandelbrot mandelbrot.cpp)
add_executable(snow snow.cpp)
add_executable(sphere sphere.cpp)
add_executable(ui1 ui1.cpp)
add_executable(ui2 ui2.cpp)
add_executable(ui3 ui3.cpp)
target_link_libraries(python PRIVATE pali)
target_link_libraries(mandelbrot PRIVATE pali)
target_link_libraries(snow PRIVATE pali)
target_link_libraries(sphere PRIVATE pali)
target_link_libraries(ui1 PRIVATE pali)
target_link_libraries(ui2 PRIVATE pali)
target_link_libraries(ui3 PRIVATE pali)
